# asr_fake_object_recognition

./: CMakeLists.txt  License.txt  README.md  package.xml
cfg/: FakeObjectRecognition.cfg
config/: Scene_A.xml  Scene_B.xml  Scene_C.xml  bounding_box_corners.xml  configuration_correct.xml  experiment_1.xml  experiment_2_1.xml  experiment_2_2.xml  experiment_2_fusion.xml  fake_configurator.xml  objects.xml  params.yaml  scene_25th_may.xml  scene_a_correct.xml  scene_b_correct.xml  spuelkorb.xml  story_1.xml  story_1_all_in_schrank.xml  story_1_all_in_spuelkorb.xml  story_1_marker5_in_spuelkorb_rest_on_tabel.xml  story_1_only_gedeck_rotated_and_displaced_on_same_tabel.xml  story_2_mission_1.xml  story_2_mission_3.xml  story_2_tisch.xml
config/2015/: EXP1_SOMMER_PARAM.xml  EXP1_SOMMER_PARAM_ROTATED.xml  EXP2_SOMMER_PARAM.xml  EXP2_SOMMER_PARAM_ROTATED.xml  EXP2_SOMMER_PARAM_TRANSLATED.xml
config/story_1/: story_1.xml  story_1_all_in_schrank.xml  story_1_all_in_spuelkorb.xml  story_1_marker5_in_spuelkorb_rest_on_table.xml  story_1_only_gedeck_rotated_and_displaced_on_same_tabel.xml
config/story_2/: story_2_mission_1.xml  story_2_mission_3.xml  story_2_tisch.xml
include/: config_marker_rotator.h  error_simulation.h  fake_object_recognition.h  object_config.h  rating.h
launch/: fake_object_recognition.launch
log/: rosconsole.config
param/: params.yaml
src/: config_marker_rotator.cpp  error_simulation.cpp  fake_object_recognition.cpp  object_config.cpp  rating.cpp
srv/: ReleaseRecognizer.srv
