<?xml version="1.0"?>
<package>
  <name>asr_fake_object_recognition</name>
  <version>1.0.0</version>
  <description>This package contains a simulated object recognizer which published objects based on preset poses and the current camera frames</description>
  <author>Allgeyer Tobias, Aumann Florian, Borella Jocelyn, Meißner Pascal, Qattan Mohamad</author>
  <maintainer email="asr-ros@lists.kit.edu">Meißner Pascal</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>roslib</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>asr_msgs</build_depend>
  <build_depend>Eigen</build_depend>
  <build_depend>cmake_modules</build_depend>
  <build_depend>dynamic_reconfigure</build_depend>
  <build_depend>asr_rapidxml</build_depend>
  <build_depend>asr_object_database</build_depend>
  <build_depend>approx_mvbb</build_depend>
  
  <run_depend>roscpp</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>roslib</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>asr_msgs</run_depend>
  <run_depend>asr_object_database</run_depend>
  <run_depend>Eigen</run_depend>
  <run_depend>dynamic_reconfigure</run_depend>
  <run_depend>asr_rapidxml</run_depend>
  <run_depend>approx_mvbb</run_depend>

</package>
